--- a/frontend/src/pages/SignupPage/SignUpPage.css
+++ b/frontend/src/pages/SignupPage/SignUpPage.css
@@ -299,7 +299,7 @@
   line-height: normal;
 }
 
-.signup-button:hover {
+.signup-login-button:hover {
   background-color: #278C9F;
 }
 
